--- a/desktop.ini
+++ b/desktop.ini
@@ -1,2 +1,2 @@
 [.ShellClassInfo]
-IconResource=D:\Program Files (x86)\BaiduNetdisk\autobackup.ico,0
+IconResource=C:\Users\PYX\AppData\Roaming\baidu\BaiduNetdisk\autobackup.ico,0
